--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+    (function() {
+    emailjs.init("user_JQCvIs0n0XC3SuQBqhlT6");
+    })();
+    </script>
+
     <title>Amzil Houdaifa</title>
   </head>
   <body>
