--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
 
     <title>Amzil Houdaifa</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-672B881J32"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-672B881J32');
+    </script>
+
   </head>
   <body>
     
